# xfce4-claude-status-plugin

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  claude-status.c  claude-status.desktop.in  claude_status_core.h  index.html
.gitea/workflows/: build.yml
.github/workflows/: build.yml
core/: Cargo.toml  build.rs  cbindgen.toml
core/src/: api.rs  config.rs  credentials.rs  ffi.rs  lib.rs  monitor.rs  transcript.rs
debian/: changelog  control  copyright  rules  watch
dists/bookworm/: Release
dists/bookworm/main/binary-amd64/: Packages
dists/sid/: Release
dists/trixie/: Release
incoming/: xfce4-claude-status-plugin-dbgsym_0.1.0-1_amd64_sid.deb  xfce4-claude-status-plugin-dbgsym_0.1.0-1_amd64_trixie.deb  xfce4-claude-status-plugin-dbgsym_0.2.0-1_amd64_sid.deb  xfce4-claude-status-plugin-dbgsym_0.2.1-1_amd64_bookworm.deb  xfce4-claude-status-plugin_0.1.0-1_amd64_bookworm.deb  xfce4-claude-status-plugin_0.2.0-1_amd64_sid.deb  xfce4-claude-status-plugin_0.2.1-1_amd64_bookworm.deb  xfce4-claude-status-plugin_0.2.1-1_amd64_trixie.deb
pool/main/: xfce4-claude-status-plugin-dbgsym_0.1.0-1_amd64_bookworm.deb  xfce4-claude-status-plugin-dbgsym_0.2.0-1_amd64_bookworm.deb  xfce4-claude-status-plugin-dbgsym_0.2.0-1_amd64_trixie.deb  xfce4-claude-status-plugin-dbgsym_0.2.1-1_amd64_sid.deb  xfce4-claude-status-plugin-dbgsym_0.2.1-1_amd64_trixie.deb  xfce4-claude-status-plugin_0.1.0-1_amd64_sid.deb  xfce4-claude-status-plugin_0.1.0-1_amd64_trixie.deb  xfce4-claude-status-plugin_0.2.0-1_amd64_bookworm.deb  xfce4-claude-status-plugin_0.2.0-1_amd64_trixie.deb  (+1 more)
(+2 files in other folders)
