[package]
name = "claude-status-core"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Core library for xfce4-claude-status-plugin"

[lib]
name = "claude_status_core"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
thiserror = "1"
dirs = "5"
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
lto = true
opt-level = "z"
strip = true
